Added Route to User detail on ClientController.php Modified link to list of Product.php Changed Role that have access to /api in security.yaml Changed group user:create to user:detail & added link to self & list in User.php Modified the doc accordingly & added UserDetail schema
